modified:   index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Three.jsと依存ライブラリ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-  <script src="lib/mmdparser.min.js"></script>
+  <script src="/lib/mmdparser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/libs/ammo.wasm.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/MMDLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/animation/MMDAnimationHelper.js"></script>
@@ -55,11 +55,11 @@
       const helper = new THREE.MMDAnimationHelper();
       const loader = new THREE.MMDLoader();
       loader.load(
-        'models/miku.pmx',
+        '/models/miku.pmx',
         function (mesh) {
           scene.add(mesh);
           loader.loadAnimation(
-            'motions/dance.vmd',
+            '/motions/dance.vmd',
             mesh,
             function (animation) {
               helper.add(mesh, { animation: animation, physics: true });
@@ -92,7 +92,7 @@
 
       // 音声認識
       const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-      recognition.lang = 'ja棍棒
+      recognition.lang = 'ja-JP';
       recognition.interimResults = false;
       recognition.maxAlternatives = 1;
 
