--- a/index.html
+++ b/index.html
@@ -27,16 +27,13 @@
   <!-- Three.jsと依存ライブラリ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="/lib/mmdparser.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/libs/ammo.wasm.js"></script>
+  <script src="https://unpkg.com/three@0.134.0/examples/js/libs/ammo.wasm.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/MMDLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/animation/MMDAnimationHelper.js"></script>
 
   <script>
-    // Ammo.jsの初期化を待つ
-    Ammo().then(function (AmmoLib) {
-      window.Ammo = AmmoLib;
-
-      // Three.js シーンのセットアップ
+    // シーンを初期化する関数
+    function initializeScene() {
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 10, 30);
@@ -44,14 +41,12 @@
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      // ライティング
       const ambientLight = new THREE.AmbientLight(0x404040);
       scene.add(ambientLight);
       const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
       directionalLight.position.set(0, 1, 1);
       scene.add(directionalLight);
 
-      // MMDモデルの読み込み
       const helper = new THREE.MMDAnimationHelper();
       const loader = new THREE.MMDLoader();
       loader.load(
@@ -62,7 +57,7 @@
             '/motions/dance.vmd',
             mesh,
             function (animation) {
-              helper.add(mesh, { animation: animation, physics: true });
+              helper.add(mesh, { animation: animation, physics: false });
             },
             function (xhr) { console.log((xhr.loaded / xhr.total * 100) + '% animation loaded'); },
             function (error) { console.error('Animation load error:', error); }
@@ -72,7 +67,6 @@
         function (error) { console.error('MMD load error:', error); }
       );
 
-      // アニメーションループ
       const clock = new THREE.Clock();
       function animate() {
         requestAnimationFrame(animate);
@@ -81,54 +75,71 @@
       }
       animate();
 
-      // 音声合成（Web Speech API）
-      function speak(text = document.getElementById('user-input').value) {
-        if (!text) text = 'こんにちは！私はMMD AIアシスタントです。';
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = 'ja-JP';
-        speechSynthesis.speak(utterance);
-        console.log('Speaking:', text);
-      }
+      return { scene, camera, renderer };
+    }
 
-      // 音声認識
-      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-      recognition.lang = 'ja-JP';
-      recognition.interimResults = false;
-      recognition.maxAlternatives = 1;
-
-      function startRecognition() {
-        recognition.start();
-        console.log('音声認識開始');
-      }
-
-      recognition.onresult = function (event) {
-        const transcript = event.results[0][0].transcript;
-        document.getElementById('user-input').value = transcript;
-        const response = simpleAIResponse(transcript);
-        speak(response);
-      };
-
-      recognition.onerror = function (event) {
-        console.error('音声認識エラー:', event.error);
-      };
-
-      // 簡易AI応答ロジック
-      function simpleAIResponse(input) {
-        if (input.includes('こんにちは')) {
-          return 'やあ！元気？';
-        } else if (input.includes('ダンス')) {
-          return 'ダンスを見たい？じゃあ、動いてみるね！';
-        } else {
-          return 'ふむふむ、面白いね！もう少し話してみて！';
-        }
-      }
-
-      // ウィンドウリサイズ対応
-      window.addEventListener('resize', () => {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
+    // Ammo.jsの初期化を試み、失敗してもシーンを初期化
+    if (typeof Ammo !== 'undefined') {
+      Ammo().then(function (AmmoLib) {
+        window.Ammo = AmmoLib;
+        initializeScene();
+      }).catch(function (error) {
+        console.warn('Ammo.js initialization failed, proceeding without physics:', error);
+        initializeScene();
       });
+    } else {
+      console.warn('Ammo.js not available, proceeding without physics');
+      initializeScene();
+    }
+
+    // 音声合成（Web Speech API）
+    function speak(text = document.getElementById('user-input').value) {
+      if (!text) text = 'こんにちは！私はMMD AIアシスタントです。';
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = 'ja-JP';
+      speechSynthesis.speak(utterance);
+      console.log('Speaking:', text);
+    }
+
+    // 音声認識
+    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+    recognition.lang = 'ja-JP';
+    recognition.interimResults = false;
+    recognition.maxAlternatives = 1;
+
+    function startRecognition() {
+      recognition.start();
+      console.log('音声認識開始');
+    }
+
+    recognition.onresult = function (event) {
+      const transcript = event.results[0][0].transcript;
+      document.getElementById('user-input').value = transcript;
+      const response = simpleAIResponse(transcript);
+      speak(response);
+    };
+
+    recognition.onerror = function (event) {
+      console.error('音声認識エラー:', event.error);
+    };
+
+    // 簡易AI応答ロジック
+    function simpleAIResponse(input) {
+      if (input.includes('こんにちは')) {
+        return 'やあ！元気？';
+      } else if (input.includes('ダンス')) {
+        return 'ダンスを見たい？じゃあ、動いてみるね！';
+      } else {
+        return 'ふむふむ、面白いね！もう少し話してみて！';
+      }
+    }
+
+    // ウィンドウリサイズ対応
+    window.addEventListener('resize', () => {
+      const { camera, renderer } = initializeScene();
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
     });
   </script>
 </body>
